...
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="1">

                <RelativeLayout
                    android:id="@+id/RelativeLayout04"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_weight="0.62"
                    android:padding="10dp">
...
                        android:layout_alignTop="@+id/datelogo"
                        android:layout_alignLeft="@+id/Location"
                        android:layout_alignStart="@+id/Location" />


                    <Button
                        android:id="@+id/maplocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Get Directions"
                        android:layout_alignParentBottom="true"
                        android:layout_toRightOf="@+id/LocationLogo"
                        android:layout_toEndOf="@+id/LocationLogo" />

                </RelativeLayout>
            </LinearLayout>
...
